--- a/技术随笔/Java 学习笔记/开发常用命令、注解、快捷键.md
+++ b/技术随笔/Java 学习笔记/开发常用命令、注解、快捷键.md
@@ -16,6 +16,8 @@
 	- // TODO：标识待完成的任务，用于提醒开发者后续需要补充实现
 	- // FIXME：标识代码有问题，需要修复
 ### Maven
+#### 查找依赖
+https://central.sonatype.com/
 #### 定义依赖
 `<scope>作用域</scope>`：指定依赖的作用范围。
 - compile：默认作用域。指示依赖在**编译**、**测试**、**运行**、**打包**时都需要。
