--- a/技术随笔/Java 学习笔记/计算机专业英语.md
+++ b/技术随笔/Java 学习笔记/计算机专业英语.md
@@ -24,3 +24,5 @@
 - **布局**：layout
 - **建模**：modeling
 - **雕刻**：sculpting
+- **最小可行产品（MVP）**：Minimum Viable Product
+- **虚拟专用服务器（VPS）**：Virtual Private Server
