--- a/技术随笔/Java 学习笔记/计算机专业英语.md
+++ b/技术随笔/Java 学习笔记/计算机专业英语.md
@@ -26,3 +26,4 @@
 - **雕刻**：sculpting
 - **最小可行产品（MVP）**：Minimum Viable Product
 - **虚拟专用服务器（VPS）**：Virtual Private Server
+- **（书籍等的）第三版**：Third Edition
