--- a/技术随笔/Java 学习笔记/数据库.md
+++ b/技术随笔/Java 学习笔记/数据库.md
@@ -4,38 +4,59 @@
 3、数据库安全与权限管理
 4、分布式数据库与集群
 5、故障排查与性能监控
-## MySQL
-### 语法
+## [MySQL](https://dev.mysql.com/doc/refman/8.0/en/)
+### 存储引擎
+#### InnoDB
+##### 限制
+- 一个表中最多可以包含 1017 列（≈ 2<sup>10</sup> 列），包含虚拟生成的列。
+- 一个表中最多可以包含 64 个（2<sup>7</sup> 个）二级索引（非主键索引）。
+	- 一个表中最多可以有 64+1=65 个索引，包含 1 个主键索引和最多 64 个二级索引。
+- 多列索引（复合索引）最多允许 16 列（2<sup>4</sup> 列）。 超过限制将返回错误。
+### SQL 语句
 - 查询所有数据库：`show databases`
 ### 数据类型
-##### tinyint
-占用空间：1 字节
-可存储范围：
-- 有符号：`[-128,127]`
-- 无符号：`[0,255]`
-##### int
-占用空间：4 字节
-可存储范围：
-有符号：`[-2147483648,2147483647]`
-无符号：`[0,4294967295]`
-##### bigint
-占用空间：8 字节
-可存储范围：
-有符号：
-无符号：
-##### decimal(M, D)
-定点数。以字符串方式进行解析、以二进制格式进行存储、以精确十进制方式进行计算。
-- `M`：正整数，标识总位数，包括整数位和小数位。范围：`[1,65]`，默认为 10。
-- `D`：整数，标识小数位数。范围：`[0, min(M,30)]`，默认为 0。
-##### char(n)
-占用空间：视编码方式而定。
-- latin1：每个字符固定占用 1 个字节。
-- utf8：每个字符最多占用 3 个字节。
-- utf8mb4：每个字符最多占用 4 个字节。
-可存储范围：指定`字符数 n` 个字符。
-##### text
-占用空间：`[0,65535]`字节
-可存储范围：视编码方式而定。
-
-##### datetime
-##### JSON
+- tinyint
+	- 占用空间：1 字节
+	- 可存储范围：
+		- 有符号：`[-128,127]`
+		- 无符号：`[0,255]`
+- int
+	- 占用空间：4 字节
+	- 可存储范围：
+		- 有符号：`[-2147483648,2147483647]`
+		- 无符号：`[0,4294967295]`
+- bigint
+	- 占用空间：8 字节
+	- 可存储范围：
+		- 有符号：
+		- 无符号：
+- decimal(M, D)
+	- 定点数。以字符串方式进行解析、以二进制格式进行存储、以精确十进制方式进行计算。
+	- `M`：正整数，标识总位数，包括整数位和小数位。范围：`[1,65]`，默认为 10。
+	- `D`：整数，标识小数位数。范围：`[0, min(M,30)]`，默认为 0。
+- char(n)
+	- 占用空间：视编码方式而定。
+		- latin1：每个字符固定占用 1 个字节。
+		- utf8：每个字符最多占用 3 个字节。
+		- utf8mb4：每个字符最多占用 4 个字节。
+	- 可存储范围：指定`字符数 n` 个字符。
+- text
+	- 占用空间：`[0,65535]`字节
+	- 可存储范围：视编码方式而定。
+- datetime
+- JSON
+### 索引
+#### 索引设计原则
+- **数据量少的表或更新频繁的表不适合加索引**：当表的数据量很小（如几百条以内），数据库在执行 SQL 查询时，全表扫描比使用索引更快。而且索引是一个额外的结构，会占用内存或磁盘空间。对小表或频繁更新的表来说，维护这些索引（如插入/删除/更新时自动更新索引）会带来额外负担，却不能带来明显的性能提升。在高并发写入的场景中，索引越多，写操作的性能越差，因为每次写入都要先锁定和更新多个索引。
+#### 主键索引
+##### 索引原理
+##### 添加索引
+#### 多列索引（Composite Index）
+指在多个列上创建的**一个**索引，多列索引也称**复合索引**。
+##### 索引原理
+###### 最左前缀原则（leftmost prefix rule）
+多列索引只有在查询中使用了**从左到右连续的前几个字段**时，才会正确生效。
+##### 添加索引
+```sql
+CREATE INDEX idx_name ON table_name (column1, column2, ...);
+```
